# CircuitTesterDocs

./: .gitignore  Dockerfile  README.md  build.sh  circuit_sim_workout.xopp  info.txt  make.pl  preprop.pl
Analysis/: analysis.html  analysis.md  before.tex  make.pl  make_analysis.pl  meta.yaml  settings.yml
Analysis/chap-3/: stakeholders.md  stating the problem.md
Analysis/chap-4/: analysis.md  approaches.md  existing_solutions.md  feature_requirements.md  limitations.md  research_questions.md  software_requirements.md  success_criteria.md
Analysis/styling/: style.css
Analysis/table_maker/: in.txt  main.pl
Bibliography/: make.pl  meta.yaml
Bibliography/docs/: bibliography.md
Design/: make.pl  meta.yaml
Design/diagrams/: Class_Circuit.dia  Class_Circuit.dia.autosave  Class_Circuit.dia~  Class_Component.dia  Class_Element.dia  Class_Element.dia~  Class_Equation.dia  Class_Equation.dia~  Class_MainWindow.dia  Class_Solution.dia  Class_Solution.dia~  Class_Term.dia  Class_Unknown.dia  Class_Unknown.dia~  algorithms.dia  blackbox_1.dia  blackbox_2.dia  blackbox_3.dia  decomposition.dia  decomposition.dia~  demonstration_circuit.dia  main_window.ui  main_window_settings_wireframe.dia  main_window_settings_wireframe.dia~  main_window_wireframe.dia  main_window_wireframe.dia~  mockup_diagram.xcf
Design/docs/: algorithms.md  algorithms.md~  decomposition.md  design.md  future_steps.md  libraries.md  sources.md  test_plans.md  test_plans.md~  validation.md
Design/pseudocode/: circuit_init.txt  circuit_misc.txt  circuit_solve.txt  component.txt  element.txt  equation.txt  find_shortest_path.txt  find_terms.txt  make_equations.txt  make_matrices.txt  run_simulation.txt  solution.txt  solve_circuit.txt  solve_matrices.txt  unknown_current.txt
Evaluation/: .~lock.plan.odt#  make.pl  meta.yaml  plan.odt
Evaluation/docs/: conclusion.md  feedback.md  future_development.md  maintainence.md  success.md  testing.md  usability_features.md
Implementation/: make.pl  meta.yaml
Implementation/code/: circuit_init.txt  element.txt  equation.txt  run_simulation.txt  unknown_current.txt  unknown_voltage.txt
Implementation/code/CircuitTester-master/src/main/: CMakeLists.txt  main.cc
Implementation/code/CircuitTester-master/src/main/Analysis/: Equation.cc  Equation.h  MNA.h  MNACircuit.cc  MNACircuit.h  MNAComponent.cc  MNAComponent.h  MNASolution.cc  Term.cc  Term.h  Unknown.cc  Unknown.h
Implementation/code/CircuitTester-master/src/main/Saves/: CircuitSaver.cc  CircuitSaver.h  UserUtils.cpp  UserUtils.h
Implementation/code/CircuitTester-master/src/main/UI/: AnalysisMapper.cc  AnalysisMapper.h  Arrow.h  MainWindow.cc  MainWindow.h  Scene.cc  Scene.h  SceneItem.cc  SceneItem.h  UIComponent.cc  UIComponent.h
Implementation/code/CircuitTester-master/src/main/UI/Components/: Battery.h  Resistor.h
Implementation/code/CircuitTester-master/src/test/: CMakeLists.txt  Test_MNA.cc  Test_MNACircuit.cc
Implementation/docs/: bugs.md  (+9 more)
Journal/: journal.md  make.pl
Proposal/: Presentation.odp  Programming Project Proposal.docx  Project Proposal Reflection.docx  presentation notes.odt  ~$oject Proposal Reflection.docx
Stating the problem/: stating the problem.md
Targets/: make.pl  meta.yaml  targets.md
global/: header.tex  meta.yaml
(+8 files in other folders)
